<resources>
    <!--General-->
    <string name="app_name">PANDA TIME</string>
    <string name="PandaLogo">PandaLogo</string>
    <string name="X">X</string>
    <string name="tick">Tick</string>
    <!--Sing in & Sign up-->
    <string name="hintName"> NAME</string>
    <string name="hintSurname"> SURNAME</string>
    <string name="hintUsername"> USERNAME</string>
    <string name="hintPassword"> PASSWORD</string>
    <string name="hintConfirmPass"> CONFIRM PASSWORD</string>
    <string name="SignIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <!--Sign in-->
    <string name="signInForgotPassword">Forgot Password?</string>
    <string name="SignInDontHaveAccount">Dont have an account?</string>
    <string name="SignUpHaveAccount">Have an account?</string>
    <!-- Dashboard -->
    <string name="dashboardHeading">Dashboard</string>
    <string name="recentTasksHeading">Recent Tasks</string>
    <string name="categories">Category:</string>
    <string name="dashimageprofile">dashboardImageProfile</string>
    <string name="dashscrollview">ScrollView</string>
    <string name="dashaddnew">Add new activity</string>
    <string name="activityName">Start an Activity</string>
    <string name="timerDefault">00:00:00</string>
    <!-- Statistics-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Settings-->
    <string name="settingsBackArrow">Back Arrow</string>
    <string name="settingsHeading">Settings</string>
    <string name="SettingsViewPager">ViewPager</string>
    <!--profile-->
    <string name="profileLogout">Logout</string>
    <string name="profileDisplayEmail">atraverso13@gmail.com</string>
    <string name="profileDisplaySurname">Traverso</string>
    <string name="profileDisplayName">Angelo</string>
    <string name="profileDisplayPassword">**********</string>
    <string name="profilePasswordHeading">Password</string>
    <string name="profileEmailHeading">Email</string>
    <string name="profileSurnameHeading">Surname</string>
    <string name="profileNameHeading">Name</string>
    <string name="profileUsernameHeading">Username</string>
    <string name="profileDisplayUsername">ATraverso</string>
    <!--add activity-->
    <string name="aaColorHeading">Color</string>
    <string name="aaCatagoryInout">Tap to set the Category</string>
    <string name="aaCatagoryHeading">Category</string>
    <string name="aaGoalInput">Tap to set the goal</string>
    <string name="aaGoalHeading">Goal</string>
    <string name="aaNameInput">Tap to set the name</string>
    <string name="aaNameHeading">Name</string>
    <string name="aaHeading">New Activity</string>
    <string name="aaColorInput">Tap to set the Colour</string>
    <string name="aaIconInput">Tap to set the Icon</string>
    <string name="aaIconHeading">Icon</string>
    <string name="aaDescHeading">Description</string>
    <string name="aaDescInput">Tap to set the description</string>

    <!--Logs-->
    <string name="LogsHeading">Logs</string>
    <string name="contentDesFilter">Filter Logs</string>
    <string name="textDate">12 April 2023</string>
    <string name="textDuration">Duration: </string>

    <!--Custom Dashboard-->
    <string name="DateCreatedText">12 April 2023</string>
    <string name="contentDesFinish">Complete Activity</string>
    <string name="contentDesPausePlay">Complete Activity</string>
    <string name="minGoal">Min Goal: 02:00:00</string>
    <string name="maxGoal">Max Goal: 04:00:00</string>

    <!-- profile settings-->
    <string name="profileInformation">Information</string>
    <string name="email">EMAIL</string>
    <string name="no_image">No Image</string>


</resources>