<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context=".AddActivity">

    <!--Heading-->
    <LinearLayout
        android:id="@+id/linearTopSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="ibClose"
            android:focusable="true"
            android:src="@drawable/close_48px"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/aaHeading"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/ivSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@null"
            android:contentDescription="@string/tick"
            android:focusable="true"
            android:src="@drawable/done_48px" />


    </LinearLayout>
    <!--End of heading-->

    <!--Body-->




    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearTopSection"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/sports_score_48px"
        android:text="@string/aaNameHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvName"
        android:autofillHints=""
        android:hint="@string/aaNameInput"
        android:inputType="text"
        android:paddingStart="48dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/tvGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aaGoalHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGoal"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/aaGoalInput"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etGoal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aaCatagoryHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:autofillHints=""
        android:hint="@string/aaCatagoryInout"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCategory"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aaColorHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvColor"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/aaColorInput"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etColor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aaIconHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIcon"
        android:autofillHints=""
        android:hint="@string/aaIconInput"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIcon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aaDescHeading"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:autofillHints=""
        android:hint="@string/aaDescInput"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#70000000"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgPandaAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/PandaLogo"
        android:rotation="90"
        android:src="@drawable/panda" />
    <!--End of body-->

    <!--FrameLayout to show add goal-->
    <FrameLayout
        android:id="@+id/popup_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!--end of FrameLayout-->

</RelativeLayout>