<?xml version="1.0" encoding="utf-8"?><!-- This linear layout is used to show elements
     in vertical or in horizontal linear manner -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileInformation"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        />

    <!-- Need to create attributes for each of these, so that we can change the text -->
    <TextView
        android:id="@+id/tvNameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/tvSubHeading"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/profileNameHeading"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvSurnameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameHeading"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:text="@string/profileSurnameHeading"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tvUsernameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSurnameHeading"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/profileUsernameHeading"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/tvDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tvSubHeading"
        android:layout_toEndOf="@+id/tvNameHeading"
        android:fontFamily="@font/inter_regular"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDisplaySurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDisplayName"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/tvSurnameHeading"
        android:text=""
        android:textSize="20sp"
        android:fontFamily="@font/inter_regular" />

    <TextView
        android:id="@+id/tvDisplayUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDisplaySurname"
        android:layout_marginStart="31dp"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/tvUsernameHeading"
        android:fontFamily="@font/inter_regular"
        android:text=""
        android:textSize="20sp" />


    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDisplayUsername"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="30sp"
        android:contentDescription="@string/contentDesPausePlay"
        android:height="50dp"
        android:width="170dp"
        android:src="@drawable/logout_48px"
        android:background="@null"
        android:text="@string/profileLogout"
        android:textColor="@color/black" />

</RelativeLayout>