<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignUp">

    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/RelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Heading-->
            <ImageView
                android:id="@+id/imgPanda"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/PandaLogo"
                android:src="@drawable/panda" /><!--End of heading-->

            <!--Main content-->
            <LinearLayout
                android:id="@+id/linearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgPanda"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTimePanda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="34dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_input_signup"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#60000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="34dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_input_signup"
                    android:hint="@string/hintSurname"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#60000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="34dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_input_signup"
                    android:hint="@string/hintUsername"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#60000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="34dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_input_signup"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#60000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="34dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_input_signup"
                    android:hint="@string/hintConfirmPass"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="#60000000"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="34dp"
                    android:background="@drawable/rounded_corner"
                    android:text="@string/signUp"
                    android:textColor="@color/black" />
            </LinearLayout><!--End of main content-->

            <!--To sing in-->
            <LinearLayout
                android:id="@+id/linearBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearInput"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="32dp"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SignUpHaveAccount" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:text="@string/SignIn"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout><!--End of to sign in-->

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>



